--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:sqlserver://peid.database.windows.net:1433;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=PEID
-spring.datasource.password=1006289995Toro
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://database.cpg2xzh8wubh.us-east-1.rds.amazonaws.com:3306/torobase
+spring.datasource.username=toro
+spring.datasource.password=1006289995toro
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql = true
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
+
 
